# theExpressionEngine

./: .gitignore  CMakeLists.txt  Makefile  README.md  binary.h  bison.y  dynamic_cast.h  environment.cpp  environment.h  expression.cpp  expression.h  expression.ipp  factory.cpp  factory.h  factory.ipp  flex.h  flex.l  make.out  onDestroy.h  parser.h  test.cpp  theExpressionEngine.cpp  theExpressionEngine.sln  theExpressionEngine.vcxproj  theExpressionEngine.vcxproj.filters  tokens.h  type.cpp  type.h  unary.h  unique.h
.github/: FUNDING.yml
